objects/ssot__VehicleAssetEmissionsSource__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BusinessRegion__c</fullName>
        <label>Business Region</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CityName__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Country__c</fullName>
        <label>Country</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CrbnEmssnScopeAlloc__c</fullName>
        <label>Carbon Emssn Scope Alloc</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FleetVehicleType__c</fullName>
        <label>Fleet Vehicle Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Vehicle Asset Emissions Source Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsCompanyOwnedAsset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Company Owned Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LeaseExpirationDate__c</fullName>
        <label>Lease Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__LeaseIdentifier__c</fullName>
        <label>Lease Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OtherEmssnFctrId__c</fullName>
        <label>Other Emission Factor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentEmissionSourceId__c</fullName>
        <label>Parent Emission Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StateId__c</fullName>
        <label>State</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StreetAddress2Text__c</fullName>
        <label>Street Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StreetAddressText__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VehicleIdentifier__c</fullName>
        <label>Vehicle Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VehicleType__c</fullName>
        <label>Vehicle Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383875491_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VehicleAssetEmissionsSource_ParentEm_rel</label>
        <referenceTo>ssot__VehicleAssetEmissionsSource__dlm</referenceTo>
        <relationshipLabel>VehicleAssetEmissionsSource_ParentEm_rel</relationshipLabel>
        <relationshipName>rel_1747383875491_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383876409_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VehicleAssetEmissionsSource_StateId__rel</label>
        <referenceTo>ssot__StateProvince__dlm</referenceTo>
        <relationshipLabel>VehicleAssetEmissionsSource_StateId__rel</relationshipLabel>
        <relationshipName>rel_1747383876409_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383885129_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VehicleAssetEmissionsSource_OtherEms_rel</label>
        <referenceTo>ssot__OtherEmissionsFactorSet__dlm</referenceTo>
        <relationshipLabel>VehicleAssetEmissionsSource_OtherEms_rel</relationshipLabel>
        <relationshipName>rel_1747383885129_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>